--- a/add.html
+++ b/add.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>add</title>
+    <link rel="stylesheet" href="add.css">
   </head>
   <body>
     <h1>시작</h1>
@@ -20,4 +21,5 @@
     <h3>hello</h3>
     <strong>구름</strong>
   </body>
+  <script src="add.js"></script>
 </html>
